overflow: scroll on stops and walks

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,8 @@ img {
   max-height: 100%;
 }
 
+
+
 h2 {
   font-size: 20px;
   color: pink;
@@ -75,9 +77,7 @@ header {
         a {
           color: pink;
           transition: all 0.2s ease;
-          // border-bottom: 5px solid #FFFFFF;
           height: 50px;
-          // @include outer-container;
           padding: 0 20px;
           &:hover {
             opacity: 0.5;
@@ -93,7 +93,6 @@ header {
               height: 3px;
               bottom: -2px;
               left: 0;
-              // background-color: $brand-color;
             }
           }
         }
@@ -117,7 +116,6 @@ header {
           top: 80px;
           left: 20%;
           padding: 0 20px;
-          // border-top: 1px solid #f9f9f9;
           li {
             display: none;
             a {
@@ -162,6 +160,7 @@ div{
     &.stops{
       height: 200px;
       border-style: solid;
+      overflow: scroll;
       &:img {
         max-width: 100%;
         max-height: inherit;
